kubernetes_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: spring-petclinic-app
  labels:
    app: discovery-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
      - name: discovery-server
        image: arupsscet1/spring-petclinic-discovery-server:${IMAGE_TAG}
        ports:
        - containerPort: 8761

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: spring-petclinic-app
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
      - name: config-server
        image: arupsscet1/spring-petclinic-config-server:${IMAGE_TAG}
        ports:
        - containerPort: 8888

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: spring-petclinic-app
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: arupsscet1/spring-petclinic-api-gateway:${IMAGE_TAG}
        ports:
        - containerPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
  namespace: spring-petclinic-app
  labels:
    app: customers-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
      - name: customers-service
        image: arupsscet1/spring-petclinic-customers-service:${IMAGE_TAG}
        ports:
        - containerPort: 8081

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  namespace: spring-petclinic-app
  labels:
    app: vets-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
      - name: vets-service
        image: arupsscet1/spring-petclinic-vets-service:${IMAGE_TAG}
        ports:
        - containerPort: 8082

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
  namespace: spring-petclinic-app
  labels:
    app: visits-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
      - name: visits-service
        image: arupsscet1/spring-petclinic-visits-service:${IMAGE_TAG}
        ports:
        - containerPort: 8083

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-service
  namespace: spring-petclinic-app
  labels:
    app: genai-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genai-service
  template:
    metadata:
      labels:
        app: genai-service
    spec:
      containers:
      - name: genai-service
        image: arupsscet1/spring-petclinic-genai-service:${IMAGE_TAG}
        ports:
        - containerPort: 8084

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  namespace: spring-petclinic-app
  labels:
    app: admin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
      - name: admin-server
        image: arupsscet1/spring-petclinic-admin-server:${IMAGE_TAG}
        ports:
        - containerPort: 9090

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: spring-petclinic-app
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        ports:
        - containerPort: 9091

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: spring-petclinic-app
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3030

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: spring-petclinic-app
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP


---

apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: spring-petclinic-app
  labels:
    app: config-server
spec:
  type: ClusterIP
  selector:
    app: config-server
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: spring-petclinic-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
